<resources>
    <string name="app_name">Blood Sugar Smart Record</string>
    <string name="title_home">Home</string>
    <string name="title_record">Record</string>
    <string name="title_login">Login</string>
    <string name="title_register">註冊</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <!-- Strings related to login -->
    <string name="login">登入</string>
    <string name="login_fail">Login fail</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>